Remove usage of deprecated JetBrains API